# xls2xml

./: .gitignore  productie_bodem_test_geom.xlsx  pyproject.toml
src/: read_excel.py
