[project]
name = "xls2xml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "elementpath==4.4.0",
    "et-xmlfile==1.1.0",
    "idna==3.7",
    "iniconfig==2.0.0",
    "lxml==5.2.2",
    "numpy==1.26.2",
    "openpyxl==3.1.2",
    "ordered-set==4.1.0",
    "owslib==0.31.0",
    "packaging==24.0",
    "pandas==2.2.2",
    "pluggy==1.5.0",
    "pyasn1==0.6.1",
    "pydov==3.1.0",
    "pysimplegui==5.0.8.2",
    "pytest==8.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2023.3.post1",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "rsa==4.9",
    "scipy==1.11.4",
    "shapely==2.0.2",
    "six==1.16.0",
    "tqdm==4.67.1",
    "tzdata==2023.3",
    "urllib3==2.2.2",
    "xlsxwriter==3.2.0",
    "xmljson==0.2.1",
    "xmlschema==3.3.0",
]
